<resources>
    <string name="app_name">iTeams</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_button">Login</string>
    <string name="login_empty_credentials">Please enter your credentials.</string>
    <string name="login_failed">Authentication failed. Please check your credentials.</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_lookup">Lookup</string>
    <string name="bottom_nav_peer_review">Peer Review</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="announcement_title_placeholder">Announcement Title</string>
    <string name="announcement_content_placeholder">Announcement Content</string>
    <string name="announcement_date_placeholder">Announcement Date</string>
    <string name="announcer_name_placeholder">Announcer Name</string>
    <string name="toolbar_settings">Settings</string>
    <string name="add_announcement">Add New Announcements</string>
    <string name="add_announcement_title">Announcement Title</string>
    <string name="add_announcement_content">Announcement Content</string>
    <string name="add_announcement_announcer_placeholder">Posted by: %1$s</string>
    <string name="add_announcement_submit_button">Submit</string>
    <string name="add_announcement_cancel_button">Cancel</string>
    <string name="profile_image_label">Profile Image</string>
    <string name="profile_reputation_score_placeholder">Reputation Score: %1$.2f</string>
    <string name="profile_name_label_placeholder">Name</string>
    <string name="profile_id_label_placeholder">ID</string>
    <string name="profile_email_label_placeholder">Email</string>
    <string name="profile_course_or_department_label_placeholder">Course/Department</string>
    <string name="profile_private_information_label_placeholder">Private Information</string>
    <string name="profile_dob_label_placeholder">Date of Birth</string>
    <string name="date_placeholder">%1$d/%2$d/%3$d</string>
    <string name="profile_password_label_placeholder">Password</string>
    <string name="profile_change_password_button">Change Password</string>
    <string name="profile_contact_placeholder">0%1$d</string>
    <string name="profile_new_password_label">New Password</string>
    <string name="profile_confirm_password_label">Confirm Password</string>
    <string name="profile_confirm_change_password_button">Submit</string>
    <string name="profile_cancel_change_password_button">Cancel</string>
    <string name="profile_password_too_short_error">Your password need to be at least 6 characters.</string>
    <string name="profile_password_not_match_error">Your confirmed password does not match with your new password.</string>
    <string name="profile_successful_update_password">Your password has been successfully changed.</string>
    <string name="profile_failure_update_password">Your password cannot be changed at the moment. Please try again later.</string>
    <string name="lookup_search_hint">Search…</string>
    <string name="lookup_search_results_label">Search Results</string>
    <string name="lookup_student_name_placeholder">Student Name</string>
    <string name="lookup_student_email_placeholder">Student Email</string>
    <string name="peer_review_student_completed">Complete Peer Review</string>
    <string name="peer_review_student_pending">Pending Peer Review</string>
    <string name="student_peer_review_questions_title_label">Peer Review Questions</string>
    <string name="student_peer_review_questions_description_label">Choose the peer that you are reviewing before you start to review.</string>
    <string-array name="student_peer_review_questions_spinner_choices">
        <item>-</item>
        <item>1 - Strongly disagree</item>
        <item>2 - Disagree</item>
        <item>3 - Neutral</item>
        <item>4 - Agree</item>
        <item>5 - Strongly agree</item>
    </string-array>
    <string name="student_peer_review_additional_comments_label">Additional Comments</string>
    <string name="student_peer_review_submit_button">Submit</string>
    <string name="student_peer_review_back_button">Back</string>
    <string name="student_peer_review_questions_placeholder">Question</string>
    <string name="student_peer_review_subject_name_placeholder">Subject Name</string>
    <string name="student_peer_review_assignment_id_group_id_placeholder">%1$s - %2$s</string>
    <string name="student_peer_review_empty_additional_comments_error">Please input additional comments.</string>
    <string name="student_peer_review_incomplete_questions_error">There are some questions that have not been completed yet.</string>
    <string name="student_peer_review_invalid_review_target_error">Please select a peer to be reviewed.</string>
    <string name="student_peer_review_target_reviewed_error">You had reviewed this peer.</string>
    <string name="student_peer_review_not_released_error">The results for this peer review has not been released yet.</string>
    <string name="lecturer_add_peer_review_button_label">New Review Session</string>
    <string name="lecturer_currently_in_charge_peer_review_label">Currently In-charged Session</string>
    <string name="lecturer_peer_review_subject_name_placeholder">Subject Name</string>
    <string name="lecturer_peer_review_assignment_id_placeholder">Assignment ID</string>
    <string name="lecturer_peer_review_groupings_label">Available Groups</string>
    <string name="lecturer_peer_review_groupings_group_id_placeholder">Group ID</string>
    <string name="lecturer_peer_review_groupings_number_of_students_placeholder">Number of Students: %1$d</string>
    <string name="lecturer_peer_review_groupings_is_done_description">Review is Done</string>
    <string name="lecturer_peer_review_groupings_download_results_button">Download Results</string>
    <string name="lecturer_peer_review_groupings_release_results_button">Release Results</string>
    <string name="lecturer_peer_review_groupings_release_results_dialog_title">Release Results</string>
    <string name="lecturer_peer_review_groupings_able_release_results_dialog_description">Are you confirm to release the results for this assignment?</string>
    <string name="lecturer_peer_review_groupings_able_release_confirm_button">Confirm</string>
    <string name="lecturer_peer_review_groupings_able_release_cancel_button">Cancel</string>
    <string name="lecturer_peer_review_groupings_successful_release_results_description">The results for this assignment has been successfully released.</string>
    <string name="lecturer_peer_review_groupings_unable_release_results_dialog_description">The results cannot be release at the moment because there are still students that have not completed their review. Please try again later.</string>
    <string name="lecturer_peer_review_groupings_unable_release_results_cancel_button">Cancel</string>
    <string name="lecturer_peer_review_individual_list_label">Student List</string>
    <string name="lecturer_peer_review_individual_list_description">Select a student to view the reviews received.</string>
    <string name="lecturer_peer_review_individual_list_email_placeholder">Student E-mail</string>
    <string name="lecturer_peer_review_individual_list_student_name_placeholder">Student Name</string>
    <string name="lecturer_peer_review_results_label">Student Results</string>
    <string name="lecturer_peer_review_results_student_name_placeholder">Reviewed by: %1$s</string>
    <string name="lecturer_peer_review_results_student_email_placeholder">Student E-mail</string>
    <string name="lecturer_peer_review_results_student_results_placeholder">Received Results: %1$d / %2$d (%3$.2f%%)</string>
    <string name="lecturer_peer_review_results_view_details_button">View Details</string>
    <string name="lecturer_peer_review_results_not_done_error_label">The following student(s) have not done the review:</string>
    <string name="lecturer_peer_review_results_not_done_student_name">Student Name</string>
    <string name="lecturer_peer_review_results_details_reviewer_label">Reviewer: %1$s</string>
    <string name="lecturer_peer_review_results_details_reviewed_label">Peer Reviewed: %1$s</string>
    <string name="lecturer_peer_review_results_details_additional_comments_label">Additional Comments: %1$s</string>
    <string name="lecturer_peer_review_results_details_question_placeholder">Question</string>
    <string name="lecturer_peer_review_results_details_answer_placeholder">Received: %1$s</string>
    <string name="add_new_peer_review_details_title_label">Add a New Peer Review Session</string>
    <string name="add_new_peer_review_details_subject_name_label">Subject Name</string>
    <string name="add_new_peer_review_details_assignment_id_label">Assignment ID</string>
    <string name="add_new_peer_review_details_upload_student_list_label">Student Groupings</string>
    <string name="add_new_peer_review_details_upload_student_list_description">Please upload a comma-separated values (.csv) file. \n 1. Create an Excel file with the table format as below. \n 2. Save the file in .csv format and upload to the system. \n\n Example:</string>
    <string name="add_new_peer_review_details_upload_student_list_example">Example of csv File</string>
    <string name="add_new_peer_review_details_upload_student_list_button">Upload Student List</string>
    <string name="add_new_peer_review_details_proceed_button">Proceed</string>
    <string name="add_new_peer_review_details_empty_subject_name_error">Please enter the subject name.</string>
    <string name="add_new_peer_review_details_empty_assignment_id_error">Please enter the assignment ID.</string>
    <string name="add_new_peer_review_details_empty_student_list_error">Please upload a valid .csv file with the correct table format.</string>
    <string name="add_new_peer_review_details_fail_to_create_error">There are problems creating a session currently. Please check your Internet connection and try again.</string>
    <string name="add_new_peer_review_question_set_title_label">Select Question Set</string>
    <string name="add_new_peer_review_default_question_set_radio_button">Default Question Set</string>
    <string name="add_new_peer_review_custom_question_set_radio_button">Custom Question Set</string>
    <string name="add_new_peer_review_add_custom_question_button">Add Question</string>
    <string name="add_new_peer_review_create_session_button">Create Session</string>
    <string name="add_new_peer_review_custom_question_set_name_label">Question Set Name</string>
    <string name="add_new_peer_review_question_placeholder">Question</string>
    <string name="add_new_peer_review_question_label">Question</string>
    <string name="add_new_peer_review_confirm_add_question_button">Confirm</string>
    <string name="add_new_peer_review_cancel_add_question_button">Cancel</string>
    <string name="add_new_peer_review_empty_new_question_error">Please enter a question.</string>
    <string name="student_view_results_title">Results</string>
    <string name="student_view_results_student_number">Student %1$d</string>
    <string name="student_view_results_actual_results">Received Results: %1$d / %2$d (%3$.2f%%)</string>
    <string name="student_view_results_additional_comments">Additional Comments: %1$s</string>
    <string name="settings_about_button">About</string>
    <string name="settings_sign_out_button">Sign Out</string>
    <string name="about_description">Version 1.0 \n \u00A9 2019 iTeams Inc. \n All rights reserved.</string>
    <string name="sign_out_description">You have successfully signed out.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
