<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/popup_change_password_background">


    <TextView
        android:id="@+id/profile_new_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_new_password_label" />

    <EditText
        android:id="@+id/profile_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:background="@drawable/add_announcement_edit_text_background"
        android:padding="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/profile_confirm_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_confirm_password_label"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/profile_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_marginTop="5dp"
        android:background="@drawable/add_announcement_edit_text_background"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:id="@+id/profile_cancel_change_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_cancel_change_password_button"
            android:layout_marginStart="220dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/profile_confirm_change_password_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_confirm_change_password_button" />
    </LinearLayout>

</LinearLayout>